cmake_minimum_required(VERSION 3.19)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(try try.cpp)
add_executable(Vector Vector.cpp)
add_executable(Set Set.cpp)
add_executable(Map Map.cpp)
add_executable(Stack Stack.cpp)
add_executable(Queue Queue.cpp)
add_executable(Others Others.cpp)

add_executable(lc_bisearch1 lc/Array/lc_bisearch.cpp)
add_executable(lc_remove lc/Array/lc_remove.cpp)
add_executable(lc_sqorder lc/Array/lc_sqorder.cpp)
add_executable(lc_minsubarray lc/Array/lc_minsubarray.cpp)
add_executable(lc_spiral lc/Array/lc_spiral.cpp)
add_executable(lc_minsubstring lc/Array/lc_minsubstring.cpp)
add_executable(lc_linkedchartfunc lc/LinkedList/lc_linkedchartfunc.cpp)
add_executable(lc_linkedchart lc/LinkedList/lc_linkedchart.cpp)