cmake_minimum_required(VERSION 3.19)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(try try.cpp)
add_executable(Vector Vector.cpp)
add_executable(Set Set.cpp)
add_executable(Map Map.cpp)
add_executable(Stack Stack.cpp)
add_executable(Queue Queue.cpp)
add_executable(Others Others.cpp)

add_executable(lc_bisearch1 lc/Array/lc_bisearch.cpp)
add_executable(lc_remove lc/Array/lc_remove.cpp)
add_executable(lc_sqorder lc/Array/lc_sqorder.cpp)
add_executable(lc_minsubarray lc/Array/lc_minsubarray.cpp)
add_executable(lc_spiral lc/Array/lc_spiral.cpp)
add_executable(lc_minsubstring lc/Array/lc_minsubstring.cpp)
add_executable(lc_linkedchartfunc lc/LinkedList/lc_linkedchartfunc.cpp)
add_executable(lc_linkedchart lc/LinkedList/lc_linkedchart.cpp)
add_executable(lc_isAnagram lc/Hash_table/lc_isAnagram.cpp)
add_executable(lc_isgroup lc/Hash_table/lc_isgroup.cpp)
add_executable(lc_findAnagram lc/Hash_table/lc_findAnagram.cpp)
add_executable(lc_joinset_initialize lc/Hash_table/lc_joinset_initialize.cpp)
add_executable(mytrial mytrial.cpp)
add_executable(lc_happynum lc/Hash_table/lc_happynum.cpp)
add_executable(lc_twosum lc/Hash_table/lc_twosum.cpp)
add_executable(lc_ransom lc/Hash_table/lc_ransom.cpp)
add_executable(lc_threesum lc/Hash_table/lc_threesum.cpp)
add_executable(lc_foursum lc/Hash_table/lc_foursum.cpp)
add_executable(lc_revert lc/String/lc_revert.cpp)
add_executable(lc_wordextraction lc/String/lc_wordextraction.cpp)
add_executable(lc_reverseleft lc/String/lc_reverseleft.cpp)
add_executable(lc_strStr lc/String/lc_strStr.cpp)
add_executable(lc_queusingstack lc/Stack/lc_stack_queue.cpp)
add_executable(lc_monoqueue lc/Stack/lc_monoqueue.cpp)
add_executable(lc_Kfreq lc/Heap/lc_Kfreq.cpp)
add_executable(lc_traversal lc/BST/lc_traversal_depth.cpp)
add_executable(lc_symetric_tree lc/BST/lc_symetric_tree.cpp)
add_executable(lc_inpostconstruct lc/BST/lc_inpostconstruct.cpp)
add_executable(lc_deletenode lc/BST/lc_deletenode.cpp)